# rethinking_prompting

./: .gitignore  CLAUDE.md  INTEGRATION.md  PROMPT.md  REPRODUCE_PROMPT.md  SKILL.md  init  pyproject.toml  readme.md  requirements.txt  run_tests.sh
tests/: conftest.py
tests/unit/: test_dataset.py
